--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ jdk:
 
 branches:
   only:
-    - master
+    - main
 
 cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
-script: "./gradlew clean build -xtest -q"
+script: "./gradlew clean build -q"
 
 notifications:
   email:
